--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
-RewriteCond %(REQUEST_FILENAME) !-d
-RewriteCond %(REQUEST_FILENAME) !-REQUEST_FILENAME
-RewiteRule ^(.+)$ index.php?url=$1
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.+)$ index.php?url=$1 [L]
