--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_NAME=pretty_girls_shop
+DB_NAME=project
 DB_PASSWORD=
 DB_HOST=localhost
 DB_USER=root
+ROOT_URL=http://localhost:9999/mvc-project
